--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,11 @@ body {
     display: flex;
     gap: 0;
 }
+@media (max-width: 767px) {
+    .first-header .logo {
+        font-size: 25px;
+    }
+}
 .first-header .fa-bars {
     display: none;
     color: rgb(212, 212, 212);
@@ -151,12 +156,22 @@ body {
     padding: 10px;
     cursor: pointer;
 }
+@media (max-width: 767px) {
+    .first-header .fa-bars {
+        font-size: 14px;
+    }
+}
 .first-header .fa-xmark {
     color: rgb(212, 212, 212);
     border: 1px solid rgb(212, 212, 212);
     font-size: 20px;
     padding: 10px;
     cursor: pointer;
+}
+@media (max-width: 767px) {
+    .first-header .fa-xmark {
+        font-size: 14px;
+    }
 }
 @media (max-width: 991px) {
     .first-header .fa-bars {
@@ -237,7 +252,7 @@ body {
     width: 100%;
     height: fit-content;
     background-color: rgba(0, 0, 0, 0.6);
-    top: 62px;
+    top: 56px;
     z-index: 100;
     padding: 15px;
     left: 0;
@@ -389,15 +404,14 @@ body {
     grid-area: kids;
     position: relative;
     z-index: 1;
+    background-image: url("../img/carousel-1.jpg");
+    background-size: cover;
 }
 @media (max-width: 991px) {
     .landing .box-kids {
         flex-basis: 100%;
+        padding: 20px 0;
     }
-}
-.landing .box-kids img {
-    max-width: 100%;
-    height: 100%;
 }
 .landing .box-kids .overlay {
     position: absolute;
@@ -405,31 +419,36 @@ body {
     height: 100%;
     top: 0;
     left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
     z-index: 1;
     background-color: #3d464d75;
 }
+.landing .box-kids .text {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+}
 @media (max-width: 991px) {
-    .landing .box-kids .overlay {
-        height: calc(100% - 3px);
+    .landing .box-kids .text {
+        transform: translateY(0);
     }
 }
-.landing .box-kids .overlay h2 {
+.landing .box-kids .text h2 {
     color: #fff;
     font-size: 45px;
     font-weight: 600;
     letter-spacing: 2px;
 }
 @media (max-width: 767px) {
-    .landing .box-kids .overlay h2 {
+    .landing .box-kids .text h2 {
         font-size: 30px;
     }
 }
-.landing .box-kids .overlay p {
+.landing .box-kids .text p {
     color: #fff;
     font-weight: 500;
     max-width: 440px;
@@ -437,11 +456,11 @@ body {
     margin: 25px;
 }
 @media (max-width: 767px) {
-    .landing .box-kids .overlay p {
+    .landing .box-kids p {
         font-size: 14px;
     }
 }
-.landing .box-kids .overlay a {
+.landing .box-kids .text a {
     color: #fff;
     text-decoration: none;
     border: 1px solid #fff;
@@ -449,23 +468,21 @@ body {
     transition: 0.3s;
     margin-bottom: 35px;
 }
-.landing .box-kids .overlay a:hover {
+.landing .box-kids .text a:hover {
     color: #3d464d;
     background-color: #fff;
 }
-.landing .box-kids .overlay ul {
+.landing .box-kids .text ul {
     display: flex;
     gap: 10px;
-    position: absolute;
-    bottom: 20px;
 }
-.landing .box-kids .overlay ul li {
+.landing .box-kids .text ul li {
     width: 20px;
     height: 20px;
     border: 1px solid #fff;
     cursor: pointer;
 }
-.landing .box-kids .overlay ul li.active {
+.landing .box-kids .text ul li.active {
     background-color: #fff;
 }
 .landing .offer {
@@ -704,58 +721,6 @@ body {
     color: #ffd333;
     font-weight: 800;
     margin-bottom: 10px;
-}
-.products .container .offer {
-    margin-top: 30px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
-    gap: 20px;
-}
-.products .container .box-offer {
-    position: relative;
-    max-width: 100%;
-    max-height: 312px;
-    overflow: hidden;
-}
-.products .container .box-offer img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: 0.3s;
-}
-.products .container .box-offer:hover img {
-    transform: rotate(6deg) scale(1.23);
-}
-.products .container .box-offer .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    z-index: 1;
-    background-color: #3d464d75;
-}
-.products .container .box-offer .overlay p {
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-    text-transform: uppercase;
-}
-.products .container .box-offer .overlay h3 {
-    font-size: 24px;
-    color: #fff;
-    margin: 12px;
-}
-.products .container .box-offer .overlay a {
-    text-decoration: none;
-    color: #3d464d;
-    background-color: #ffd333;
-    padding: 8px 10px;
 }
 /* End Products */
 /* Start Gallerys */
